# budgie-desktop

./: README.md  meson.build  meson_options.txt
src/abomination/: abomination.vala
src/applets/budgie-menu/: BudgieMenu.vala  BudgieMenuButtons.vala
src/applets/clock/: ClockApplet.vala
src/applets/icon-tasklist/: DesktopHelper.vala  IconButton.vala  IconPopover.vala  IconTasklistApplet.vala  animation.vala
src/applets/notifications/: NotificationsApplet.vala
src/applets/raven-trigger/: RavenTriggerApplet.vala
src/applets/status/: SoundIndicator.vala  meson.build
src/applets/tasklist/: TasklistApplet.vala
src/applets/tray/carbontray/: child.c  child.h  tray.c  tray.h
src/applets/user-indicator/: UserIndicator.vala
src/applets/workspaces/: WorkspaceItem.vala
src/bridges/labwc/: labwc_bridge.py
src/daemon/: endsession.vala  main.vala  menus.vala  osd.vala
src/lib/: animation.vala
src/panel/: budgie-desktop-settings.vala  main.vala  manager.vala  meson.build  panel.vala
src/panel/settings/: settings_applet_chooser.vala  settings_desktop.vala  settings_main.vala  settings_panel.vala  settings_panel_applets.vala  settings_panel_dialogs.vala  themes.vala
src/plugin/: applet-info.c  applet-info.h  applet.c  applet.h  plugin.c  plugin.h  popover-manager.c  popover-manager.h  popover.c  popover.h
src/raven/: app_sound_control.vala  headerwidget.vala  notifications_view.vala  powerstrip.vala  raven.vala
src/raven/mpris/: MprisClient.vala  MprisGui.vala  MprisWidget.vala
src/rundialog/: RunDialog.vala
src/theme/: theme-manager.c  theme.c
src/theme/3.20/: _resets.scss
src/wm/: budgie-wm.desktop.in  keyboard.vala  wm.vala
vapi/: generate-mutter-vapi.sh  gnome-bluetooth-3.0.vapi
